--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -11,6 +11,10 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v2
+      - name: Install latest stable
+        uses: actions-rs/toolchain@v1
+        with:
+            toolchain: stable
       - name: Publish
         uses: cloudflare/wrangler-action@1.3.0
         with:
