--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
             toolchain: stable
+            default: true
+            override: true
       - name: Publish
         uses: cloudflare/wrangler-action@1.3.0
         with:
