--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -17,6 +17,7 @@ jobs:
             toolchain: stable
             default: true
             override: true
+      - run: rustc --version
       - name: Publish
         uses: cloudflare/wrangler-action@1.3.0
         with:
